Fixing footer alignment on account page

--- a/nft-teleporter/src/styles/Footer.css
+++ b/nft-teleporter/src/styles/Footer.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: left;
+    color: #FFFFFF;
 }
 
 .footer-tag-line {
